--- a/configuration.yaml
+++ b/configuration.yaml
@@ -16,6 +16,9 @@ scene: !include scenes.yaml
 
 media_player: !include players.yaml
 
+ifttt:
+  key: !secret ifttt_key
+
 discovery:
 
 sensor: !include_dir_merge_list sensors/
