--- a/.github/workflows/yaml.yml
+++ b/.github/workflows/yaml.yml
@@ -1,5 +1,6 @@
+---
 name: Yaml Lint
-on: [push]
+on: '[push]'
 jobs:
   lintAllTheThings:
     runs-on: ubuntu-latest
@@ -7,3 +8,4 @@ jobs:
     - uses: actions/checkout@v1
     - name: yaml-lint
       uses: ibiqlik/action-yamllint@v3
+...
