--- a/.github/workflows/yaml.yml
+++ b/.github/workflows/yaml.yml
@@ -8,4 +8,7 @@ jobs:
     - uses: actions/checkout@v1
     - name: yaml-lint
       uses: ibiqlik/action-yamllint@v3
+      with:
+        config_data: >
+          "{extends: default, rules: {new-line-at-end-of-file: disable}}"
 ...
