--- a/.github/workflows/yaml.yml
+++ b/.github/workflows/yaml.yml
@@ -9,6 +9,8 @@ jobs:
     - name: yaml-lint
       uses: ibiqlik/action-yamllint@v3
       with:
-        config_data: >
-          "{extends: default, rules: {new-line-at-end-of-file: disable}}"
+        config_data: |
+          extends: default
+          rules:
+            truthy: disable
 ...
