--- a/sensors/misc.yaml
+++ b/sensors/misc.yaml
@@ -1,3 +1,4 @@
+---
 # Miscellaneous sensors
 ########
 
@@ -8,9 +9,14 @@
   sensors:
     sunrise:
       friendly_name: "Sunrise"
-      value_template: "{{ as_timestamp(state_attr('sun.sun', 'next_rising')) | timestamp_custom ('%H:%M') }}"
+      value_template: >
+        {{ as_timestamp(state_attr('sun.sun', 'next_rising'))
+        | timestamp_custom ('%H:%M') }}
       icon_template: 'mdi:weather-sunset-up'
     sunset:
       friendly_name: "Sunset"
-      value_template: "{{ as_timestamp(state_attr('sun.sun', 'next_setting')) | timestamp_custom ('%H:%M') }}"
+      value_template: >
+        {{ as_timestamp(state_attr('sun.sun', 'next_setting'))
+        | timestamp_custom ('%H:%M') }}
       icon_template: 'mdi:weather-sunset-down'
+...
