--- a/.github/workflows/yaml.yml
+++ b/.github/workflows/yaml.yml
@@ -1,6 +1,10 @@
 ---
 name: Yaml Lint
-on: [push]
+on:
+  push:
+    paths:
+      - '*.yml'
+      - '*.yaml'
 jobs:
   lintAllTheThings:
     runs-on: ubuntu-latest
