--- a/.github/workflows/python.yml
+++ b/.github/workflows/python.yml
@@ -10,13 +10,12 @@ jobs:
   flake8_py3:
     runs-on: ubuntu-latest
     steps:
+      - uses: actions/checkout@master
       - name: Setup Python
         uses: actions/setup-python@v1
         with:
           python-version: 3.8
           architecture: x64
-      - name: Checkout PyTorch
-        uses: actions/checkout@master
       - name: Install flake8
         run: pip install flake8
       - name: Run flake8
