--- a/automations.yaml
+++ b/automations.yaml
@@ -21,4 +21,40 @@
           {{ states('sensor.covid_rate') }}/100k people.
         url: !secret local_covid_url
   mode: single
+- id: '1611828376879'
+  alias: Update bin days
+  trigger:
+    - platform: time
+      at: 00:05:00
+  action:
+    - service: homeassistant.update_entity
+      entity_id:
+        - sensor.green_bin_day
+        - sensor.black_bin_day
+- id: '1611943017008'
+  alias: Bin day notification
+  description: >
+    Send an IFTTT notification when it is Green Bin Day or Black Bin Day.
+  trigger:
+    - platform: time
+      at: 06:00:00
+  condition:
+    - condition: or
+      conditions:
+        - condition: state
+          entity_id: sensor.black_bin_day
+          state: Today
+        - condition: state
+          entity_id: sensor.green_bin_day
+          state: Today
+  action:
+    - service: script.ifttt_notification
+      data:
+        title: Bin day
+        message: |
+          {% set colour = 'Black' -%}
+          {% if is_state('sensor.green_bin_day', 'Today') -%}
+            {% set colour = 'Green' %}
+          {%- endif -%} {{ colour }} Bin Day
+  mode: single
 ...
