--- a/automations/recycling.yaml
+++ b/automations/recycling.yaml
@@ -1,26 +1,9 @@
 ---
-- id: '1611945742569'
-  alias: COVID Alert
-  description: Send IFTTT notification if COVID rate or alert level changes.
-  trigger:
-    - platform: state
-      entity_id: sensor.covid_alert_raw
-      attribute: level
-    - platform: state
-      entity_id: sensor.covid_rate
-  condition:
-    - condition: time
-      after: 06:00:00
-      before: '23:00:00'
-  action:
-    - service: script.ifttt_notification
-      data:
-        title: COVID Alert
-        message: >
-          {{ state_attr('sensor.covid_alert_raw', 'name') }},
-          {{ states('sensor.covid_rate') }}/100k people.
-        url: !secret local_covid_url
-  mode: single
+# Automations for recycling sensors
+########
+
+# Reformat next date templates for each new day.
+
 - id: '1611828376879'
   alias: Update bin days
   trigger:
@@ -31,6 +14,7 @@
       entity_id:
         - sensor.green_bin_day
         - sensor.black_bin_day
+
 - id: '1611943017008'
   alias: Bin day notification
   description: >
