--- a/configuration.yaml
+++ b/configuration.yaml
@@ -20,6 +20,9 @@ media_player: !include players.yaml
 ifttt:
   key: !secret ifttt_key
 
+mqtt:
+  broker: 127.0.0.1
+
 discovery:
 
 sensor: !include_dir_merge_list sensors/
