--- a/configuration.yaml
+++ b/configuration.yaml
@@ -26,4 +26,12 @@ mqtt:
 discovery:
 
 sensor: !include_dir_merge_list sensors/
+
+rest_command:
+  voice_monkey:
+    url: https://api.voicemonkey.io/trigger
+    method: POST
+    verify_ssl: true
+    content_type: 'application/json'
+    payload: !secret voice_monkey_template
 ...
