Switch doorbell automation to use discovered device

--- a/automations/doorbell.yaml
+++ b/automations/doorbell.yaml
@@ -10,8 +10,12 @@
   alias: Doorbell alerts
   description: Send configured alerts when the doorbell is pushed.
   trigger:
-    - platform: mqtt
-      topic: smartbell/ringing
+    - platform: device
+      domain: mqtt
+      device_id: ad05c197194f71170e88ecae95b2eae2
+      type: button_short_press
+      subtype: button_1
+      discovery_id: smartbell1
   variables:
     message: Someone at the door there is!
   action:
