Add status reporting
Depend on Mosquitto MQTT broker service, and send status messages via MQTT when the RTL-SDR service starts or stops.

--- a/scripts/rtl-sdr.service
+++ b/scripts/rtl-sdr.service
@@ -1,11 +1,15 @@
 [Unit]
 Description=RTL-SDR radio receiver/decoder
 After=network-online.target dev-rtlsdr.device
-Requires=network-online.target dev-rtlsdr.device
+Requires=network-online.target dev-rtlsdr.device mosquitto.service
 
 [Service]
 ExecStart=/usr/local/bin/rtl_433 -c /etc/rtl_433.conf
+ExecStartPost=/usr/bin/mosquitto_pub -r -t rtl_433/status -m online
+ExecStopPost=/usr/bin/mosquitto_pub -r -t rtl_433/status -m offline
 Restart=always
 RestartSec=3
 User=rtlsdr
 
+[Install]
+WantedBy=mosquitto.service
