--- a/configuration.yaml
+++ b/configuration.yaml
@@ -17,6 +17,12 @@ scene: !include scenes.yaml
 
 media_player: !include players.yaml
 
+camera:
+  - platform: generic
+    name: Living Room TV Screenshot
+    still_image_url: "http://raspberrypi:8123\
+      {{ state_attr('media_player.living_room_tv_2', 'entity_picture') }}"
+
 ifttt:
   key: !secret ifttt_key
 
