--- a/configuration.yaml
+++ b/configuration.yaml
@@ -33,6 +33,12 @@ discovery:
 
 sensor: !include_dir_merge_list sensors/
 
+binary_sensor:
+  - platform: ping
+    host: sylar
+    count: 2
+    scan_interval: 60
+
 rest_command:
   voice_monkey:
     url: https://api.voicemonkey.io/trigger
