Log power instead of current
Because it is needed for the power history graph on my dashboard. Also, it takes less history database space as it doesn't have supplementary attributes.

--- a/configuration.yaml
+++ b/configuration.yaml
@@ -16,7 +16,7 @@ recorder:
   exclude:
     entities:
       - sensor.hp_envy_photo_7100_series_uptime
-      - sensor.power
+      - sensor.current
 
 history:
   exclude:
