--- a/automations/radio.yaml
+++ b/automations/radio.yaml
@@ -16,4 +16,18 @@
     target:
       entity_id: media_player.kitchen_radio
   mode: single
+- id: '1622532153673'
+  alias: Idle TV
+  description: Turn off TV when it has been idle for 5 minutes
+  trigger:
+  - platform: state
+    entity_id: media_player.living_room_tv_2
+    to: 'standby'
+    for: '00:05:00'
+  condition: []
+  action:
+  - service: media_player.turn_off
+    target:
+      entity_id: media_player.living_room_tv_2
+  mode: single
 ...
