Use local address in ping sensor
Normally the host name is resolved by the router, but once it has gone offline for a while, the router forgets. Using an mDNS address for the host avoids lots of error messages in the log if the hostname can't otherwise be resolved.

--- a/configuration.yaml
+++ b/configuration.yaml
@@ -51,7 +51,7 @@ sensor: !include_dir_merge_list sensors/
 
 binary_sensor:
   - platform: ping
-    host: sylar
+    host: sylar.local
     count: 2
     scan_interval: 60
 
