Fix automation to use new entity names

--- a/automations/recycling.yaml
+++ b/automations/recycling.yaml
@@ -13,10 +13,10 @@
     - condition: or
       conditions:
         - condition: state
-          entity_id: sensor.black_bin_day
+          entity_id: sensor.black_bin
           state: Today
         - condition: state
-          entity_id: sensor.green_bin_day
+          entity_id: sensor.green_bin
           state: Today
   action:
     - service: script.ifttt_notification
