--- a/configuration.yaml
+++ b/configuration.yaml
@@ -5,6 +5,7 @@ default_config:
 # Include customizations automatically
 homeassistant:
   customize: !include customize.yaml
+  packages: !include_dir_named packages
 
 # Text to speech
 tts:
