--- a/packages/energy/automation.yaml
+++ b/packages/energy/automation.yaml
@@ -20,4 +20,40 @@ energy_automation:
             title: Efergy Low Battery
             message: Time to change the batteries in the energy meter.
       mode: single
+  script:
+    kill_if_idle:
+      description:
+        "Turn off a switch if it isn't already off, but its load is at idle."
+      fields:
+        switch_entity:
+          name: Switch entity
+          description: Switch to turn off
+          selector:
+            entity:
+              device_class: outlet
+        power_entity:
+          name: Power measurement entity
+          description: Entity to check to determine if switch is under load.
+          selector:
+            entity:
+              device_class: power
+        idle_power:
+          name: Idle threshold
+          description: Switch will be turned off if below this power.
+          selector:
+            number:
+              mode: box
+              min: 1
+              max: 3500
+              unit_of_measurement: W
+      sequence:
+        - condition: state
+          entity_id: "{{ switch_entity }}"
+          state: "on"
+        - condition: numeric_state
+          entity_id: "{{ power_entity }}"
+          below: {{ idle_power }}
+        - service: switch.turn_off
+          target:
+            entity_id: "{{ switch_entity }}"
 ...
