--- a/scripts.yaml
+++ b/scripts.yaml
@@ -1,13 +1,29 @@
 ---
 ifttt_notification:
   alias: IFTTT Notification
+  fields:
+    title:
+      selector:
+        text:
+      default: HomeAssistant
+    message:
+      selector:
+        text:
+    url:
+      selector:
+        text:
   sequence:
     - service: ifttt.trigger
       data:
         event: ha_alert
-        value1: '{{ title }}'
-        value2: '{{ message }}'
-        value3: '{{ url }}'
+        value1: >-
+          {% if title is defined %}
+            {{ title }}
+          {% else %}
+            HomeAssistant
+          {% endif %}
+        value2: '{% if message is defined %}{{ message }}{% endif %}'
+        value3: '{% if url is defined %}{{ url }}{% endif %}'
   mode: parallel
   icon: mdi:cellphone-message
   max: 10
