Allow power sensor to be tracked as a statistic
Statistics need a 'measurement', 'total' or 'total_increasing' state_class.

--- a/packages/energy/template.yaml
+++ b/packages/energy/template.yaml
@@ -16,6 +16,7 @@ energy_template:
               | float * 244)
               | round / 1000
             }}
+          state_class: measurement
           unique_id: 34743b
           unit_of_measurement: kW
 ...
