--- a/packages/sylar.yaml
+++ b/packages/sylar.yaml
@@ -12,9 +12,9 @@ sylar:
         sylar:
           friendly_name: Sylar
           command_off: >
-            /home/homeassistant/scripts/sylar_off.py sylar.local
+            /home/homeassistant/scripts/sylar_off.py sylar.broadband
             "`/home/homeassistant/scripts/hass_secret sylar_pwd`"
-          command_state: '/bin/ping -c2 -w3 sylar.local'
+          command_state: '/bin/ping -c2 -w3 sylar.broadband'
   homeassistant:
     customize:
       switch.sylar:
