Add timestamps to alert messages.

--- a/packages/airq/quality.yaml
+++ b/packages/airq/quality.yaml
@@ -23,8 +23,9 @@ airq_low_q_alerts:
         - service: script.ifttt_notification
           data:
             title: Air Quality Alert
-            message: >
-              Current PM2.5 level:
+            message: >-
+              PM2.5 level at
+              {{ '{:02}:{:02}'.format(now().hour, now().minute) }}:
               {{ states('sensor.airq_vindriktning_pm2_5') }} µg/m³
             url: "http://{{ states('input_text.hostname') }}:8123/lovelace/3"
       mode: single
