Bond eth0 and wlan0 for dynamic failover on one IP address
Using instructions at https://forums.raspberrypi.com/viewtopic.php?t=327576

Note Avahi config had to be changed to allow MDNS/DNS SD on bonded network interface.

--- a/etc/dhcpcd.conf
+++ b/etc/dhcpcd.conf
@@ -1,59 +1,48 @@
-# A sample configuration for dhcpcd.
-# See dhcpcd.conf(5) for details.
+# nano /etc/dhcpcd.conf
+	# Customize Per Interfaces...
+	# Disable eth0 and wlan0 When Bond0 Desired.
+	# Comment the following line, to allow dhcp with static fall back for eth0 and wlan0...
+	denyinterfaces eth0 wlan0
 
-# Allow users of this group to interact with dhcpcd via the control socket.
-#controlgroup wheel
+	# Configuration...
+	hostname
+	clientid
+	persistent
+	option rapid_commit
+	option domain_name_servers, domain_name, domain_search, host_name
+	option classless_static_routes
+	option interface_mtu
+	require dhcp_server_identifier
+	slaac private
 
-# Inform the DHCP server of our hostname for DDNS.
-hostname
+	# Static Bond0...
+	profile STATIC_BOND0
+	static ip_address=192.168.0.67/24
+	#static ip6_address=/64
+	static routers=192.168.0.2
+	static domain_name_servers=8.8.8.8
 
-# Use the hardware address of the interface for the Client ID.
-clientid
-# or
-# Use the same DUID + IAID as set in DHCPv6 for DHCPv4 ClientID as per RFC4361.
-# Some non-RFC compliant DHCP servers do not reply with this set.
-# In this case, comment out duid and enable clientid above.
-#duid
+	# Dynamic Bond0...
+	interface bond0
+	fallback STATIC_BOND0
 
-# Persist interface configuration when dhcpcd exits.
-persistent
+	# Static eth0...
+	profile STATIC_ETH0
+	static ip_address=192.168.0.67/24
+	#static ip6_address=/64
+	static routers=192.168.0.2
+	static domain_name_servers=8.8.8.8
 
-# Rapid commit support.
-# Safe to enable by default because it requires the equivalent option set
-# on the server to actually work.
-option rapid_commit
+	# Dynamic eth0...
+	interface eth0
+	fallback STATIC_ETH0
 
-# A list of options to request from the DHCP server.
-option domain_name_servers, domain_name, domain_search, host_name
-option classless_static_routes
-# Respect the network MTU. This is applied to DHCP routes.
-option interface_mtu
+	# Static wlan0...
+	profile STATIC_WLAN0
+	static ip_address=192.168.0.68/24
+	static routers=192.168.0.2
+	static domain_name_servers=8.8.8.8
 
-# Most distributions have NTP support.
-#option ntp_servers
-
-# A ServerID is required by RFC2131.
-require dhcp_server_identifier
-
-# Generate SLAAC address using the Hardware Address of the interface
-#slaac hwaddr
-# OR generate Stable Private IPv6 Addresses based from the DUID
-slaac private
-
-# Example static IP configuration:
-#interface eth0
-#static ip_address=192.168.0.10/24
-#static ip6_address=fd51:42f8:caae:d92e::ff/64
-#static routers=192.168.0.1
-#static domain_name_servers=192.168.0.1 8.8.8.8 fd51:42f8:caae:d92e::1
-
-# It is possible to fall back to a static IP if DHCP fails:
-# define static profile
-#profile static_eth0
-#static ip_address=192.168.1.23/24
-#static routers=192.168.1.1
-#static domain_name_servers=192.168.1.1
-
-# fallback to static profile on eth0
-#interface eth0
-#fallback static_eth0
+	# Dynamic wlan0...
+	interface wlan0
+	fallback STATIC_WLAN0
