--- a/etc/avahi/avahi-daemon.conf
+++ b/etc/avahi/avahi-daemon.conf
@@ -24,7 +24,7 @@
 #browse-domains=0pointer.de, zeroconf.org
 use-ipv4=yes
 use-ipv6=yes
-allow-interfaces=eth0,wlan0
+allow-interfaces=bond0,eth0,wlan0
 #deny-interfaces=eth1
 #check-response-ttl=no
 #use-iff-running=no
