--- a/packages/recycling/template.yaml
+++ b/packages/recycling/template.yaml
@@ -76,4 +76,18 @@ recycling_template:
                 {{ next_ts | timestamp_custom('%a %b %-d', True) }}
               {%- endif %}
             {%- endif %}
+        - name: greeen_or_black
+          icon: 'mdi:trash-can'
+          state: >
+            {%- set next_gr =
+                state_attr('sensor.bin_day', 'bins')['Green']['next_date']
+                | as_timestamp() -%}
+            {%- set next_bk =
+                state_attr('sensor.bin_day', 'bins')['Black']['next_date']
+                | as_timestamp() -%}
+            {%- if next_gr < next_bk -%}
+              Green
+            {%- else -%}
+              Black
+            {%- endif -%}
 ...
