--- a/configuration.yaml
+++ b/configuration.yaml
@@ -36,7 +36,7 @@ automation: !include_dir_merge_list automations/
 script: !include scripts.yaml
 scene: !include scenes.yaml
 
-media_player: !include players.yaml
+#media_player: !include players.yaml
 
 ifttt:
   key: !secret ifttt_key
