--- a/configuration.yaml
+++ b/configuration.yaml
@@ -32,7 +32,7 @@ history:
       - binary_sensor.updater
 
 group: !include groups.yaml
-automation: !include_dir_merge_list automations/
+automation: !include automations.yaml
 script: !include scripts.yaml
 scene: !include scenes.yaml
 
